feat: add search for profiles abstracts by criteria endpoint
