# src/main/java/org/tkit/onecx/user/profile/rs/external/v1/controllers/UserProfileV1RestController.java
@@ -1,10 +1,13 @@
 package org.tkit.onecx.user.profile.rs.external.v1.controllers;
 
+import java.util.List;
+
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
 import jakarta.ws.rs.core.Response;
 
+import org.tkit.onecx.user.profile.domain.criteria.UserProfileAbstractCriteria;
 import org.tkit.onecx.user.profile.domain.daos.PreferenceDAO;
 import org.tkit.onecx.user.profile.domain.daos.UserProfileDAO;
 import org.tkit.onecx.user.profile.domain.models.UserProfile;
@@ -12,9 +15,11 @@ import org.tkit.onecx.user.profile.domain.service.UserProfileService;
 import org.tkit.onecx.user.profile.rs.external.v1.mappers.PreferenceV1Mapper;
 import org.tkit.onecx.user.profile.rs.external.v1.mappers.UserProfileV1Mapper;
 import org.tkit.quarkus.context.ApplicationContext;
+import org.tkit.quarkus.jpa.daos.PageResult;
 import org.tkit.quarkus.log.cdi.LogService;
 
 import gen.org.tkit.onecx.user.profile.rs.external.v1.UserProfileV1Api;
+import gen.org.tkit.onecx.user.profile.rs.external.v1.model.UserProfileAbstractDTO;
 
 @LogService
 @ApplicationScoped
@@ -97,4 +102,18 @@ public class UserProfileV1RestController implements UserProfileV1Api {
         return Response.ok(userProfileV1Mapper.map(userProfile.getAccountSettings())).build();
     }
 
+    @Override
+    public Response searchProfileAbstractsByCriteria(List<String> userIds, List<String> emailAddresses,
+            List<String> displayNames,
+            Integer pageNumber, Integer pageSize) {
+        final var criteria = UserProfileAbstractCriteria.builder()
+                .userIds(userIds)
+                .emailAddresses(emailAddresses)
+                .displayNames(displayNames).build();
+        final var userProfilesPageResult = userProfileDAO.findProfileAbstractByCriteria(criteria, pageNumber, pageSize);
+        final var profileAbstractsStream = userProfilesPageResult.getStream().map(userProfileV1Mapper::mapToAbstract);
+        final var pageResult = new PageResult<>(userProfilesPageResult.getTotalElements(),
+                profileAbstractsStream, userProfilesPageResult.getNumber(), userProfilesPageResult.getSize());
+        return Response.ok(pageResult).build();
+    }
 }
